--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME="Sistema de Ofícios"
+APP_ENV=production
+APP_KEY=base64:BYFYu7qElAx9HWcpuHeg3KSPesVnn+aTYOMZ40H7Wts=
+APP_DEBUG=false
+APP_URL=https://oficios2.cett.org.br/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=c15oficios2db
+DB_USERNAME=c15oficios2db
+DB_PASSWORD=fAxa!oLN6Y
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=gsi@cett.org.br
+MAIL_PASSWORD="Raz56294"
+MAIL_ENCRYPTION=SSL/TLS
+MAIL_FROM_ADDRESS="gsi@cett.org.br"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
