update testes send email

--- a/.env.prod
+++ b/.env.prod
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.office365.com
 MAIL_PORT=587
-MAIL_USERNAME=gsi@cett.org.br
-MAIL_PASSWORD="Raz56294"
+MAIL_USERNAME=oficios@cett.org.br
+MAIL_PASSWORD="Gjd8Ph4wShMdbpnU"
 MAIL_ENCRYPTION=SSL/TLS
-MAIL_FROM_ADDRESS="gsi@cett.org.br"
+MAIL_FROM_ADDRESS="oficios@cett.org.br"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
