--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "predis/predis": "^2.1",
+        "spatie/browsershot": "^4.0",
+        "spatie/image": "^2.2",
+        "spatie/laravel-pdf": "^1.2",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
