--- a/.env.prod
+++ b/.env.prod
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=c15oficios2db
-DB_USERNAME=c15oficios2db
-DB_PASSWORD=fAxa!oLN6Y
+DB_DATABASE=teste
+DB_USERNAME=teste
+DB_PASSWORD=teste
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
