--- a/.env.prod
+++ b/.env.prod
@@ -32,7 +32,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.office365.com
 MAIL_PORT=587
 MAIL_USERNAME=oficios@cett.org.br
-MAIL_PASSWORD="Gjd8Ph4wShMdbpnU"
+MAIL_PASSWORD="senha-teste"
 MAIL_ENCRYPTION=SSL/TLS
 MAIL_FROM_ADDRESS="oficios@cett.org.br"
 MAIL_FROM_NAME="${APP_NAME}"
